--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
-    "zone.js": "0.6.12"
+    "zone.js": "0.6.12",
+    "marked": "^0.3.5",
+    "material-design-icons": "^2.2.3"
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.9",
