--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "systemjs": "0.19.26",
     "zone.js": "0.6.12",
     "marked": "^0.3.5",
-    "material-design-icons": "^2.2.3"
+    "material-design-icons": "^2.2.3",
+    "roboto-fontface": "^0.5.0"
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.9",
