--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "zone.js": "0.6.12",
     "marked": "^0.3.5",
     "material-design-icons": "^2.2.3",
-    "roboto-fontface": "^0.5.0"
+    "roboto-fontface": "^0.5.0",
+    "node-sass": "^3.8.0",
+    "ng2-material": "*"
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.9",
