--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ng2-material": "*"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.9",
+    "angular-cli": "^1.0.0-beta.11-webpack.2",
     "codelyzer": "0.0.20",
     "ember-cli-inject-live-reload": "1.4.0",
     "jasmine-core": "2.4.1",
